--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li id="to-left">
+          <p><a href="/"> Lab Express Basic </a></p>
+        </li>
+        <li id="to-right">
+          <a href="/signup">Signup</a>
+        </li>
+      </ul>
+    </nav>
 
     {{{body}}}
 
